# Finchippay-Solution

./: .gitignore  .versionrc.json  ANALYTICS_GUIDE.md  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  DEPLOYMENT_GUIDE.md  ENV.md  GRANTFOX_ISSUES.md  IMPLEMENTATION_REPORT.md  LICENSE  MANUAL_PUSH_INSTRUCTIONS.md  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_131.md  PR_DESCRIPTION_138.md  PR_DESCRIPTION_238.md  PR_DESCRIPTION_CANARY.md  PR_DESCRIPTION_LOAD_TEST.md  PR_DESCRIPTION_SDK.md  PR_METRICS.md  PWA-SETUP.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  TURRETS.md  ZK_PROOF_IMPLEMENTATION.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  push_zk_proof.ps1  scheduledTransactionRoutes.js  stellar.js  validate_contract.py
.github/: dependabot.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json
docs/: api.md  architecture.md  deployment.md  grafana-dashboard.json  grafana-datasources.yml  grafana-notifiers.yml  load-test-baseline.md  logging.md  monitoring-runbook.md  onboarding.md  performance.md  prometheus-alerts.yml  prometheus.yml  rate-limiting.md  sdk.md  swap.md  terraform.md
frontend/: .env.example  AI_PAYMENT_ASSISTANT.md  Dockerfile.prod  i18next-scanner.config.js  jest.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  test-ledger.js  vercel.json
issues/: README.md
lib/: stellar.ts
scripts/: add-labels-to-issues.js  canary-check.js  create-grantfox-issues.js  create-grantfox-labels.js  (+5 more)
(+224 files in other folders)
