[workspace]
resolver = "2"
members = [
    "contracts/stellar-micropay-contract",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-overflow]
inherits = "release"
overflow-checks = true
